[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "df2onehot"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Python package df2onehot is to convert a pandas dataframe into a stuctured dataframe."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = [
    "Python",
    "one-hot encoding",
    "preprocessing",
    "structuring",
    "encoding",
    "categorical encoding",
    "df2onehot",
    "dataframe encoding",
    "feature engineering",
    "machine learning",
    "data transformation",
    "dummy variables",
    "pandas",
    "scikit-learn",
    "data preprocessing"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    'packaging',
    'scikit-learn',
    'numpy',
    'pandas',
    'tqdm',
    'datazets',
]

[project.urls]
Homepage = "https://erdogant.github.io/df2onehot"
Download = "https://github.com/erdogant/df2onehot/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["df2onehot"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "df2onehot.__version__" }
